# TopicMapper

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md  TODO.md  asset_generator.py  config.json  logging.conf  main.py  pyproject.toml  requirements.txt  settings.json
backend/: dialogs.py  parser.py  renamer.py  report.py  undo.py  utils.py
frontend/: index.html
frontend/css/: animations.css  style.css  theme.css
frontend/js/: api.js  app.js  format.js  ui.js
