[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "TopicMapper"
version = "1.0.0"
description = "Intelligent Batch Video File Renaming System"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
    { name = "Muhammad Muzamil" }
]

keywords = [
    "rename",
    "batch-renamer",
    "video",
    "education",
    "python",
    "desktop"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: Microsoft :: Windows",
    "License :: OSI Approved :: MIT License"
]